XmlNode class changed to use C++17 string_view to avoid extra copies. --Added TinyXml class to hold a copy of the full xml string for xmlNode tree to use.

--- a/msvc/TinyXml/TinyXml.vcxproj
+++ b/msvc/TinyXml/TinyXml.vcxproj
@@ -76,6 +76,7 @@
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -123,9 +124,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\src\TinyXml.cpp" />
     <ClCompile Include="..\..\src\XmlNode.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\src\TinyXml.h" />
     <ClInclude Include="..\..\src\XmlNode.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
